Test hibernate.default_batch_fetch_size setting

--- a/gtpb_server/hibernate.properties
+++ b/gtpb_server/hibernate.properties
@@ -353,7 +353,8 @@ hibernate.max_fetch_depth 1
 
 ## set the default batch size for batch fetching
 
-hibernate.default_batch_fetch_size 8
+## Oliver: test this
+#hibernate.default_batch_fetch_size 8
 
 
 ## rollback generated identifier values of deleted entities to default values
