Test relation change detection in slides

--- a/gtpb_server/hibernate.properties
+++ b/gtpb_server/hibernate.properties
@@ -354,7 +354,7 @@ hibernate.max_fetch_depth 1
 ## set the default batch size for batch fetching
 
 ## Oliver: test this
-#hibernate.default_batch_fetch_size 8
+hibernate.default_batch_fetch_size 8
 
 
 ## rollback generated identifier values of deleted entities to default values
