--- a/gtpb_server/velocity.properties
+++ b/gtpb_server/velocity.properties
@@ -1,5 +1,4 @@
 directive.parse.max.depth = 100
-
 resource.manager.logwhenfound = false
 resource.loader = file
 file.resource.loader.class = org.apache.velocity.runtime.resource.loader.FileResourceLoader
@@ -9,8 +8,8 @@ file.resource.loader.cache = true
 #velocimacro.library.autoreload = false
 # For development
 #################
-file.resource.loader.modificationCheckInterval = 1
+#file.resource.loader.modificationCheckInterval = 1
 # For production
 ################
-#runtime.log.logsystem.class = org.apache.velocity.runtime.log.NullLogChute
-#file.resource.loader.modificationCheckInterval = 3600
+runtime.log.logsystem.class = org.apache.velocity.runtime.log.NullLogChute
+file.resource.loader.modificationCheckInterval = 3600
