See more rows style

--- a/gtpb_server/WEB-INF/web.xml
+++ b/gtpb_server/WEB-INF/web.xml
@@ -146,5 +146,13 @@
 	    <form-error-page>/website/login_error.htm</form-error-page>
 	  </form-login-config>
 	</login-config>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/website/500.jsp</location>
+  </error-page>
+  <error-page> 
+    <error-code>404</error-code> 
+    <location>/website/404.htm</location> 
+  </error-page>
 
 </web-app>
