Replace org.json with Jackson JSON generator

--- a/.classpath
+++ b/.classpath
@@ -76,5 +76,6 @@
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/javatools.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/Thumbnailator-0.3.6.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/JWalk11.jar"/>
+	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/jackson-mini-1.9.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
