--- a/gtpb_server/velocity.properties
+++ b/gtpb_server/velocity.properties
@@ -2,14 +2,15 @@ directive.parse.max.depth = 100
 resource.manager.logwhenfound = false
 resource.loader = file
 file.resource.loader.class = org.apache.velocity.runtime.resource.loader.FileResourceLoader
-file.resource.loader.path = /usr/local/tomcat/apache-tomcat/webapps/agileBase/WEB-INF/templates
+#file.resource.loader.path = /usr/local/tomcat/apache-tomcat/webapps/agileBase/WEB-INF/templates
+file.resource.loader.path = /var/lib/tomcat7/webapps/agileBase/WEB-INF/templates
 #velocimacro.library = velocimacros/agilebase_macros.vm
 file.resource.loader.cache = true
 #velocimacro.library.autoreload = false
 # For development
 #################
-#file.resource.loader.modificationCheckInterval = 1
+file.resource.loader.modificationCheckInterval = 1
 # For production
 ################
-runtime.log.logsystem.class = org.apache.velocity.runtime.log.NullLogChute
-file.resource.loader.modificationCheckInterval = 3600
+#runtime.log.logsystem.class = org.apache.velocity.runtime.log.NullLogChute
+#file.resource.loader.modificationCheckInterval = 3600
