--- a/.classpath
+++ b/.classpath
@@ -77,5 +77,6 @@
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/Thumbnailator-0.3.6.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/JWalk11.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/jackson-mini-1.9.2.jar"/>
+	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
