--- a/.classpath
+++ b/.classpath
@@ -78,5 +78,6 @@
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/JWalk11.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/jackson-mini-1.9.2.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/mail.jar"/>
+	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/im4java-1.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
