--- a/.classpath
+++ b/.classpath
@@ -55,7 +55,6 @@
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/opencsv-1.5.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/oro-2.0.8.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/oscache-2.1.jar"/>
-	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/poi-3.6-20091214.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/proxool-0.8.3.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/qdox-1.4.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/simple-log-rollover.jar"/>
@@ -79,5 +78,7 @@
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/jackson-mini-1.9.2.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/mail.jar"/>
 	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/im4java-1.3.0.jar"/>
+	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/poi-3.8.jar"/>
+	<classpathentry kind="lib" path="gtpb_server/WEB-INF/lib/poi-ooxml-3.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
