Velocity paths for Ubuntu Tomcat

--- a/gtpb_server/velocity.properties
+++ b/gtpb_server/velocity.properties
@@ -2,7 +2,7 @@ directive.parse.max.depth = 100
 resource.manager.logwhenfound = false
 resource.loader = file
 file.resource.loader.class = org.apache.velocity.runtime.resource.loader.FileResourceLoader
-file.resource.loader.path = /usr/local/tomcat/apache-tomcat/webapps/agileBase/WEB-INF/templates
+file.resource.loader.path = /usr/local/tomcat/apache-tomcat/webapps/agileBase/WEB-INF/templates, /var/lib/tomcat7/webapps/agileBase/WEB-INF/templates
 #file.resource.loader.path = /var/lib/tomcat7/webapps/agileBase/WEB-INF/templates
 #velocimacro.library = velocimacros/agilebase_macros.vm
 file.resource.loader.cache = true
